# llm-toolkit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/: HANDOFF.md
docs/superpowers/plans/: 2026-04-28-runner-dashboard-phase1.md  2026-04-29-runner-dashboard-phase2.md  2026-04-29-runner-dashboard-phase3.md  2026-05-02-architecture-deepening.md
docs/superpowers/specs/: 2026-04-28-runner-dashboard-design.md
fixtures/: graphwalks.json
src/llm_toolkit/: __init__.py  db.py  harness.py  results.py
src/llm_toolkit/bench/: __init__.py  classifier.py  coding.py  context.py  measure.py  runner.py  scorer.py  suite.py  (+2 more)
tests/: test_classifier.py  test_coding.py  test_context.py  test_db.py  test_db_migrate_cli.py  test_experiment.py  test_harness.py  test_measure.py  test_optimizer.py  test_providers.py  test_qlora.py  test_results.py  test_results_sqlite.py  test_runner.py  test_scorer.py  test_suite.py  test_throughput.py  test_throughput_benchy.py
tests/discovery/: test_cache.py  test_hosts.py  test_llama_server.py  test_ollama.py  test_snapshot_journal.py  test_types.py  test_vllm.py
tests/jobs/: conftest.py  test_argv.py  test_broadcaster.py  test_events.py  test_queue.py  test_worker.py
tests/web/: test_app.py  test_hosts_route.py  test_models_route.py  test_results_route.py  test_runs_cancel.py  test_runs_post.py  test_runs_route.py  test_runs_ws.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/src/: api.ts  app.tsx  index.css  main.tsx  types.ts
(+63 files in other folders)
