[project]
name = "llm-toolkit"
version = "0.1.0"
description = "General-purpose local LLM benchmarking, prompt optimization, and fine-tuning toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]
train = [
    "unsloth",
    "datasets",
    "trl",
    "transformers",
    "torch>=2.0",
]
mlx = [
    "mlx-lm",
]

[project.scripts]
llm-toolkit = "llm_toolkit.bench.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_toolkit"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
